refactor(xiaoyu):重构聊天客户端示例并更新依赖
- 重构了 ChatClientExample 中的用户消息构建方式，使用 Builder 模式
- 更新了聊天客户端请求和响应的处理方式
- 添加了 spring-ai-rag 依赖
- 更新了 spring-ai-bom 依赖版本- 重构了 ReReadingAdvisor 类，适配新的聊天客户端请求和响应
- 移除了 InMemoryChatMemory 的使用

Signed-off-by: StudiousXiaoYu <1316356098@qq.com>